--- a/dev/index.pug
+++ b/dev/index.pug
@@ -4,15 +4,20 @@ head
   meta(charset="UTF-8")
   meta(http-equiv="X-UA-Compatible", content="IE=edge")
   meta(name="viewport", content="width=device-width, initial-scale=1.0")
-  title Document
+  title Frontend Mentor - REST Countries API with color theme switcher
   link(rel="stylesheet", href="style.css")
+  link(rel="shortcut icon", href="favicon-32x32.png", type="image/x-icon")
   script(src="https://kit.fontawesome.com/e8f815e43c.js", crossorigin="anonymous")
-body 
-  header(class="header-bar")
-    h1 Where in the World?
-    button
-      i.fa-regular.fa-sun
+  link(rel="preconnect" href="https://fonts.googleapis.com")
+  link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
+  link(href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap" rel="stylesheet")
+body
+  header.header-bar
+    h1.main-title Where in the World?
+    button.toggle-theme
+      i.fa-regular.fa-moon
+      span Dark Mode
 
-  main(class="home", id="home-screen")
-    div(class="details")
+  main.home#home-screen
+    div.details
   script(src="main.js")
